Fixed ICS scraper

--- a/scrapers/securus/package.json
+++ b/scrapers/securus/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "ics",
+	"name": "securus",
 	"version": "0.0.1",
 	"description": "This is a boilerplate of an Apify actor.",
 	"dependencies": {
