--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ package-lock.json
 **/apify_storage/datasets
 **/apify_storage/request_queues
 **/apify_storage/key_value_stores/default/**
+types/dist/**
