--- a/types/package.json
+++ b/types/package.json
@@ -1,21 +1,25 @@
 {
-  "name": "ptdp-types",
-  "version": "1.0.0",
+  "name": "@ptdp/types",
+  "version": "1.0.3",
   "description": "",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "prepublish": "tsc",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc"
+    "prettier": "prettier --write \"**/*.{ts,tsx,json}\"",
+    "test": "dtslint ."
   },
-  "keywords": [],
-  "author": "",
+  "author": "prison.telcom.data.project@gmail.com",
   "license": "ISC",
   "devDependencies": {
-    "typescript": "^4.1.3"
+    "dtslint": "github:Microsoft/dtslint#production",
+    "prettier": "^1.14.3",
+    "typescript": "^3.3.1"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
   },
   "dependencies": {
-    "@types/firebase": "^3.2.1"
+    "@firebase/firestore-types": "^2.1.0"
   }
 }
