--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,12 @@
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log",
-    "watch": "./node_modules/.bin/tsc --watch"
+    "watch": "./node_modules/.bin/tsc --watch",
+    "knex:migrate:make": "knex migrate:make --knexfile src/db/knexfile.ts -x ts",
+    "knex:migrate:latest": "knex migrate:latest --knexfile src/db/knexfile.ts",
+    "knex:migrate:rollback": "knex migrate:rollback --knexfile src/db/knexfile.ts",
+    "knex:seed:make": "knex seed:make --knexfile src/db/knexfile.ts -x ts",
+    "knex:seed:run": "knex seed:run --knexfile src/db/knexfile.ts"
   },
   "engines": {
     "node": "10"
@@ -19,7 +24,11 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "firebase-admin": "^8.6.0",
-    "firebase-functions": "^3.3.0"
+    "firebase-functions": "^3.3.0",
+    "knex": "^0.21.15",
+    "objection": "^2.2.6",
+    "pg": "^8.5.1",
+    "ts-node": "^9.1.1"
   },
   "devDependencies": {
     "@ptdp/types": "^1.0.3",
