--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,8 @@
   },
   "main": "lib/index.js",
   "dependencies": {
-    "@ptdp/lib": "^1.0.7",
+    "@ptdp/lib": "^1.0.11",
+    "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "firebase-admin": "^8.6.0",
