--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,7 @@
     "knex": "^0.21.15",
     "objection": "^2.2.6",
     "pg": "^8.5.1",
+    "postgraphile": "^4.10.0",
     "ts-node": "^9.1.1",
     "xlsx": "^0.16.9"
   },
