--- a/lib/tsconfig.json
+++ b/lib/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "module": "commonjs",
-    "lib": ["es6", "dom"],
+    "lib": ["es6", "dom", "esnext"],
     "noImplicitAny": true,
     "noImplicitThis": false,
     "strictNullChecks": true,
