--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,7 +36,6 @@
     "lint-staged": "10.3.0",
     "node-plop": "0.26.2",
     "plop": "2.7.4",
-    "postcss": "7.0.35",
     "prettier": "2.1.1",
     "react": "16.13.1",
     "react-app-polyfill": "1.0.6",
@@ -45,7 +44,7 @@
     "react-i18next": "11.7.2",
     "react-redux": "7.2.1",
     "react-router-dom": "5.2.0",
-    "react-scripts": "4.0.1",
+    "react-app-rewired": "4.0.1",
     "react-test-renderer": "16.13.1",
     "redux-injectors": "1.3.0",
     "redux-saga": "1.1.3",
@@ -64,11 +63,12 @@
     "web-vitals": "0.2.4"
   },
   "scripts": {
-    "start": "npm run build:style && react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "build:style": "tailwind build src/styles/index.css -o src/styles/tailwind.css",
-    "eject": "react-scripts eject",
+    "start": "concurrently -n Tailwind,React 'npm run watch:css' 'react-app-rewired start'",
+    "build": "npm run build:css && react-app-rewired build",
+    "test": "react-app-rewired test",
+    "build:css": "tailwind build src/styles/index.css -o src/styles/tailwind.css",
+    "watch:css": "chokidar 'src/styles/index.css' -c 'npm run build:css'",
+    "eject": "react-app-rewired eject",
     "test:generators": "ts-node --project=./internals/ts-node.tsconfig.json ./internals/testing/generators/test-generators.ts",
     "start:prod": "yarn run build && serve -s build",
     "checkTs": "tsc --noEmit",
@@ -134,8 +134,15 @@
   "devDependencies": {
     "@craco/craco": "6.0.0",
     "@tailwindcss/postcss7-compat": "2.0.2",
-    "autoprefixer": "9.8.6",
+    "autoprefixer": "9.8.5",
+    "babel-plugin-macros": "3.0.1",
+    "chokidar-cli": "2.1.0",
+    "concurrently": "5.3.0",
+    "postcss": "8.2.6",
     "postcss-cli": "8.3.1",
+    "postcss-import": "12.0.1",
+    "postcss-nested": "4.2.3",
+    "react-app-rewired": "2.1.8",
     "tailwindcss": "2.0.2",
     "twin.macro": "2.1.1"
   }
