--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,7 +44,7 @@
     "react-i18next": "11.7.2",
     "react-redux": "7.2.1",
     "react-router-dom": "5.2.0",
-    "react-app-rewired": "4.0.1",
+    "react-scripts": "4.0.2",
     "react-test-renderer": "16.13.1",
     "redux-injectors": "1.3.0",
     "redux-saga": "1.1.3",
