--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "@types/webpack-env": "1.15.2",
     "chalk": "4.1.0",
     "cross-env": "7.0.2",
+    "deck.gl": "8.4.5",
     "eslint-config-prettier": "6.11.0",
     "eslint-plugin-prettier": "3.1.4",
     "eslint-plugin-react-hooks": "4.1.0",
@@ -34,6 +35,7 @@
     "inquirer-directory": "2.2.0",
     "jest-styled-components": "7.0.3",
     "lint-staged": "10.3.0",
+    "luma.gl": "7.3.2",
     "node-plop": "0.26.2",
     "plop": "2.7.4",
     "prettier": "2.1.1",
@@ -42,10 +44,12 @@
     "react-dom": "16.13.1",
     "react-helmet-async": "1.0.7",
     "react-i18next": "11.7.2",
+    "react-map-gl": "6.1.7",
     "react-redux": "7.2.1",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.2",
     "react-test-renderer": "16.13.1",
+    "react-vis": "1.11.7",
     "redux-injectors": "1.3.0",
     "redux-saga": "1.1.3",
     "replace-in-file": "6.1.0",
