--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "@ptdp/lib": "^1.0.28",
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "csv": "^5.3.2",
     "csv-parse": "^4.14.2",
     "express": "^4.17.1",
@@ -37,6 +38,7 @@
   },
   "devDependencies": {
     "@ptdp/types": "^1.0.3",
+    "@types/cors": "^2.8.10",
     "firebase-functions-test": "^0.1.6",
     "husky": "^4.3.7",
     "pretty-quick": "^3.1.0",
