--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "3.3.10",
     "@reduxjs/toolkit": "1.4.0",
     "@testing-library/jest-dom": "5.11.4",
     "@testing-library/react": "11.0.2",
@@ -27,6 +28,7 @@
     "eslint-plugin-prettier": "3.1.4",
     "eslint-plugin-react-hooks": "4.1.0",
     "fontfaceobserver": "2.1.0",
+    "graphql": "15.5.0",
     "husky": "4.2.5",
     "i18next": "19.7.0",
     "i18next-browser-languagedetector": "6.0.1",
