--- a/backend/package.json
+++ b/backend/package.json
@@ -27,10 +27,12 @@
     "csv": "^5.3.2",
     "csv-parse": "^4.14.2",
     "express": "^4.17.1",
+    "fast-csv": "^4.3.6",
     "firebase-admin": "^8.6.0",
     "firebase-functions": "^3.3.0",
     "knex": "^0.21.15",
     "objection": "^2.2.6",
+    "octonode": "^0.10.0",
     "pg": "^8.5.1",
     "postgraphile": "^4.10.0",
     "ts-node": "^9.1.1",
@@ -39,6 +41,7 @@
   "devDependencies": {
     "@ptdp/types": "^1.0.3",
     "@types/cors": "^2.8.10",
+    "@types/node": "^14.14.31",
     "firebase-functions-test": "^0.1.6",
     "husky": "^4.3.7",
     "pretty-quick": "^3.1.0",
