--- a/backend/package.json
+++ b/backend/package.json
@@ -38,6 +38,7 @@
     "pg": "^8.5.1",
     "postgraphile": "^4.10.0",
     "ts-node": "^9.1.1",
+    "us-state-codes": "^1.1.2",
     "uuid": "^8.3.2",
     "xlsx": "^0.16.9"
   },
