--- a/frontend/package.json
+++ b/frontend/package.json
@@ -65,8 +65,10 @@
     "stylelint-config-recommended": "3.0.0",
     "stylelint-config-styled-components": "0.1.1",
     "stylelint-processor-styled-components": "1.10.0",
+    "topojson-client": "3.1.0",
     "ts-node": "9.0.0",
     "typescript": "4.1.3",
+    "us-atlas": "3.0.0",
     "web-vitals": "0.2.4"
   },
   "scripts": {
