--- a/frontend/package.json
+++ b/frontend/package.json
@@ -69,7 +69,8 @@
     "ts-node": "9.0.0",
     "typescript": "4.1.3",
     "us-atlas": "3.0.0",
-    "web-vitals": "0.2.4"
+    "web-vitals": "0.2.4",
+    "yieldable-json": "2.0.1"
   },
   "scripts": {
     "start": "concurrently -n Tailwind,React 'npm run watch:css' 'react-app-rewired start'",
@@ -153,6 +154,7 @@
     "postcss-nested": "4.2.3",
     "react-app-rewired": "2.1.8",
     "tailwindcss": "2.0.2",
-    "twin.macro": "2.1.1"
+    "twin.macro": "2.1.1",
+    "worker-loader": "3.0.8"
   }
 }
