--- a/frontend/package.json
+++ b/frontend/package.json
@@ -52,6 +52,7 @@
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.2",
     "react-test-renderer": "16.13.1",
+    "react-tooltip": "4.2.15",
     "react-vis": "1.11.7",
     "redux-injectors": "1.3.0",
     "redux-saga": "1.1.3",
