--- a/frontend/package.json
+++ b/frontend/package.json
@@ -62,6 +62,7 @@
     "sanitize.css": "12.0.1",
     "serve": "11.3.2",
     "shelljs": "0.8.4",
+    "simple-statistics": "7.6.0",
     "styled-components": "5.1.0",
     "stylelint": "13.7.0",
     "stylelint-config-recommended": "3.0.0",
