--- a/scrapers/gtl-ts/package.json
+++ b/scrapers/gtl-ts/package.json
@@ -7,6 +7,8 @@
 		"@ptdp/lib": "^1.0.36",
 		"@types/puppeteer": "^5.4.3",
 		"apify": "^1.0.1",
+		"cheerio": "^1.0.0-rc.5",
+		"libxmljs": "^0.19.7",
 		"puppeteer": "*",
 		"us-state-codes": "^1.1.2"
 	},
