--- a/scrapers/gtl-ts/tsconfig.json
+++ b/scrapers/gtl-ts/tsconfig.json
@@ -3,6 +3,7 @@
         "target": "es2018",
         "module": "commonjs",
         "moduleResolution": "node",
+        "esModuleInterop": true,
         "strict": true,
         "noImplicitAny": false,
         "strictNullChecks": false,
