--- a/frontend/package.json
+++ b/frontend/package.json
@@ -75,6 +75,7 @@
     "ts-node": "9.0.0",
     "typescript": "4.1.3",
     "us-atlas": "3.0.0",
+    "us-state-codes": "1.1.2",
     "web-vitals": "0.2.4",
     "yieldable-json": "2.0.1"
   },
