--- a/scrapers/securus/package.json
+++ b/scrapers/securus/package.json
@@ -3,7 +3,8 @@
 	"version": "0.0.1",
 	"description": "This is a boilerplate of an Apify actor.",
 	"dependencies": {
-		"apify": "^0.22.2"
+		"apify": "^0.22.2",
+		"axios": "^0.21.1"
 	},
 	"devDependencies": {
 		"@apify/eslint-config": "0.1.3",
